# simple_quad_simulator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml
data/: dense.pcd  sample.pcd
include/: quad.h
launch/: generate_pcd.launch  map_generate.yaml  map_parameters.yaml  sample.launch  simulation_parameters.yaml
params/: param.yaml
ros1/: CMakeLists.txt  package.xml
ros1/include/: quad.h
ros1/launch/: generate_pcd.launch  sample.launch
ros1/rviz/: display.rviz
ros1/src/: main.cpp  quad.cpp
rviz/: display.rviz  display_40.rviz
scripts/: gen_launch.py  gen_launch_w_trajectory.py  gen_rviz_display.py  test.py  test_trajectory.py
src/: map_simple_pub.cpp  quad.cpp
